[package]
name = "push_decode"
version = "0.2.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
license = "MITNFA"
repository = "https://github.com/Kixunil/push_decode"
description = "Push-based decoding and pull-based encoding"
categories = ["parsing", "rust-patterns", "no-std", "no-std::no-alloc"]
keywords = ["decoding", "encoding", "async-agnostic", "no_std"]
readme = "README.md"
edition = "2018"
rust-version = "1.56.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
std = ["alloc"]
alloc = []
async-std = ["actual-async-std", "std", "pin-project-lite"]
futures_0_3 = ["futures_io_0_3", "std", "pin-project-lite"]
tokio = ["actual-tokio", "std", "pin-project-lite"]

[dependencies]
actual-async-std = { package = "async-std", version = "1.0.0", optional = true, default-features = false, features = ["std"] }
actual-tokio = { package = "tokio", version = "1.0.1", optional = true, default-features = false, features = ["io-util"] }
either = "1.8.1"
futures_io_0_3 = { package = "futures-io", version = "0.3.0", optional = true, default-features = false }
pin-project-lite = { version = "0.2.9", optional = true }
lgio = { version = "0.1", optional = true, default-features = false }
